Ajustes e implementações diversas 09-04-2017

--- a/web/controleacesso/sessionTimeOut.xhtml
+++ b/web/controleacesso/sessionTimeOut.xhtml
@@ -30,7 +30,7 @@
             </p:toolbarGroup> 
             <p:toolbarGroup align="right" style="position:absolute; right:15px; top: 55px">  
 
-                    <span id="usuario" style="font-weight: bold ; font-size:12px;"> #{request.remoteUser == null ? 'Visitante' : clienteBEAN.getClienteByUsuario(usuario.getIdusuario())}</span>
+                    <span id="usuario" style="font-weight: bold ; font-size:12px;"> #{request.remoteUser == null ? 'Visitante' : clienteBEAN.getClienteByUsuario(usuario).getNome()}</span>
                     <p:separator />
                     <span id="textosessaoexpira" style="font-weight: bold ; font-size:12px;">#{request.remoteUser == null ? '' : 'Sessão expira em: '} </span>
                     <span id="dialog-countdown" style="font-weight: bold ; font-size:12px;"></span>
