--- a/web/pedidoTemplate.xhtml
+++ b/web/pedidoTemplate.xhtml
@@ -17,7 +17,7 @@
         </f:metadata>
 
         <h:head>
-            <p:growl id="mensagens" autoUpdate="true"  sticky="true"/>
+            <p:growl id="mensagens" autoUpdate="true"  sticky="false" life="5000"/>
 
             <p:layout fullPage="true" resizeTitle="resize" style="background-color:#FFFFFF;">
               
