Ajustes e implementações diversas 13-04-2017

--- a/web/itemPedidoDAO/Create.xhtml
+++ b/web/itemPedidoDAO/Create.xhtml
@@ -17,15 +17,15 @@
                 <h:panelGrid columns="2">
                     <h:outputLabel value="#{bundle.CreateItemPedidoDAOLabel_iditem}" for="iditem" />
                     <h:inputText id="iditem" value="#{itemPedidoDAOController.selected.iditem}" title="#{bundle.CreateItemPedidoDAOTitle_iditem}" required="true" requiredMessage="#{bundle.CreateItemPedidoDAORequiredMessage_iditem}"/>
-                    <h:outputLabel value="#{bundle.CreateItemPedidoDAOLabel_idproduto}" for="idproduto" />
-                    <h:selectOneMenu id="idproduto" value="#{itemPedidoDAOController.selected.idproduto}" title="#{bundle.CreateItemPedidoDAOTitle_idproduto}" required="true" requiredMessage="#{bundle.CreateItemPedidoDAORequiredMessage_idproduto}">
-                        <f:selectItems value="#{produtoDAOController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
                     <h:outputLabel value="#{bundle.CreateItemPedidoDAOLabel_quantidade}" for="quantidade" />
                     <h:inputText id="quantidade" value="#{itemPedidoDAOController.selected.quantidade}" title="#{bundle.CreateItemPedidoDAOTitle_quantidade}" required="true" requiredMessage="#{bundle.CreateItemPedidoDAORequiredMessage_quantidade}"/>
                     <h:outputLabel value="#{bundle.CreateItemPedidoDAOLabel_idpedido}" for="idpedido" />
                     <h:selectOneMenu id="idpedido" value="#{itemPedidoDAOController.selected.idpedido}" title="#{bundle.CreateItemPedidoDAOTitle_idpedido}" required="true" requiredMessage="#{bundle.CreateItemPedidoDAORequiredMessage_idpedido}">
-                        <f:selectItems value="#{pedidoDAOController.itemsAvailableSelectOne}"/>
+                        <f:selectItems value="#{pedidoBean.itemsAvailableSelectOne}"/>
+                    </h:selectOneMenu>
+                    <h:outputLabel value="#{bundle.CreateItemPedidoDAOLabel_idproduto}" for="idproduto" />
+                    <h:selectOneMenu id="idproduto" value="#{itemPedidoDAOController.selected.idproduto}" title="#{bundle.CreateItemPedidoDAOTitle_idproduto}" required="true" requiredMessage="#{bundle.CreateItemPedidoDAORequiredMessage_idproduto}">
+                        <f:selectItems value="#{produtoDAOController.itemsAvailableSelectOne}"/>
                     </h:selectOneMenu>
                 </h:panelGrid>
                 <br />
