--- a/web/pedidoTemplate.xhtml
+++ b/web/pedidoTemplate.xhtml
@@ -35,9 +35,9 @@
                     <h:form >
                         <p:menu>
                             <p:submenu label="MENU DE ACESSO">
-                                <p:menuitem value="Meus dados" url="meus_dados"/>
-                                <p:menuitem value="Realizar pedidos" url="meus_dados"/>
-                                <p:menuitem value="Meus pedidos" url="meus_pedidos.xhtml"/>
+                                <p:menuitem value="Meus dados" url="manterCliente.xhtml?edit=true"/>
+                                <p:menuitem value="Realizar pedidos" url="pedido.xhtml"/>
+                                <p:menuitem value="Meus pedidos" url="pedido.xhtml"/>
                             </p:submenu>
                         </p:menu>
                     </h:form>
