--- a/web/pedidoTemplate.xhtml
+++ b/web/pedidoTemplate.xhtml
@@ -35,7 +35,7 @@
                     <h:form >
                         <p:menu>
                             <p:submenu label="MENU DE ACESSO">
-                                <p:menuitem value="Meus dados" url="manterCliente.xhtml?edit=true"/>
+                                <p:menuitem value="Meus dados" url="manterCliente.xhtml?editCliente=true"/>
                                 <p:menuitem value="Realizar pedidos" url="pedido.xhtml"/>
                                 <p:menuitem value="Meus pedidos" url="pedido.xhtml"/>
                             </p:submenu>
