--- a/web/cad_funcionario.xhtml
+++ b/web/cad_funcionario.xhtml
@@ -36,7 +36,7 @@
                 <p:password id="senha" required="true" value="#{funBean.funcionario.senha}"/>
 
                 <p:commandButton value="Cadastrar" actionListener="#{funBean.cadastrar()}"
-                                 update=":form_cadastro:formFun"/>
+                                 update=":form_cadastro"/>
 
                 <p:commandButton value="Limpar" type="reset"/>
             </h:panelGrid>
