Ajustes e implementações diversas 23-04-2017

--- a/web/manterCliente.xhtml
+++ b/web/manterCliente.xhtml
@@ -49,7 +49,8 @@
                             <h:panelGrid id="formCadLogin" columns="4">
                                 <p:outputLabel value="Login:" for="login"/>
                                 <p:inputText id="login" required="true" 
-                                             requiredMessage="Campo Login é obrigatório" value="#{clienteDAOController.selectedUsuario.nmusuario}"/>              
+                                             requiredMessage="Campo Login é obrigatório" 
+                                             value="#{clienteDAOController.selectedUsuario.nmusuario}"/>              
 
                                 <p:outputLabel value="Senha:" for="senha" />
                                 <p:password id="senha" required="true" 
