<?xml version="1.0" encoding="UTF-8"?> <!-- You may freely edit this file. See commented blocks below for --> <!-- some examples of how to customize the build. --> <!-- (If you delete it and reopen the project it will be recreated.) --> <!-- By default, only the Clean and Build commands use this build script. --> <!-- Commands such as Run, Debug, and Test only use this build script if --> <!-- the Compile on Save feature is turned off for the project. --> <!-- You can turn off the Compile on Save (or Deploy on Save) setting --> <!-- in the project's Project Properties dialog box.--> <project name="PROJETO_TCC" default="default" basedir=".">     <description>Builds, tests, and runs the project PROJETO_TCC.</description>     <import file="nbproject/build-impl.xml"/>     <!--
    There exist several targets which are by default empty and which can be 
    used for execution of your tasks. These targets are usually executed 
    before and after some main targets. They are: 

      -pre-init:                 called before initialization of project properties 
      -post-init:                called after initialization of project properties 
      -pre-compile:              called before javac compilation 
      -post-compile:             called after javac compilation 
      -pre-compile-single:       called before javac compilation of single file
      -post-compile-single:      called after javac compilation of single file
      -pre-compile-test:         called before javac compilation of JUnit tests
      -post-compile-test:        called after javac compilation of JUnit tests
      -pre-compile-test-single:  called before javac compilation of single JUnit test
      -post-compile-test-single: called after javac compilation of single JUunit test
      -pre-dist:                 called before archive building 
      -post-dist:                called after archive building 
      -post-clean:               called after cleaning build products 
      

--- a/web/manterCliente.xhtml
+++ b/web/manterCliente.xhtml
@@ -34,7 +34,7 @@
                                          size="60"/>
 
                             <p:outputLabel value="Telefone:" for="telefone"/>
-                            <p:inputMask mask="(99)9.9999-9999" id="telefone" required="true" 
+                            <p:inputMask mask="(99)99999-9999" id="telefone" required="true" 
                                          requiredMessage="Campo Telefone é obrigatório" value="#{clienteDAOController.selected.telefone}"/>
 
                             <p:outputLabel value="Email:" for="email"/>
@@ -54,12 +54,18 @@
                                 <p:outputLabel value="Senha:" for="senha" />
                                 <p:password id="senha" required="true" 
                                             requiredMessage="Campo Senha é obrigatório" value="#{clienteDAOController.selectedUsuario.deSenha}"/>   
+                           
+                                <p:outputLabel value="Confirmar Senha" for="confirmarSenha"/>
+                                <p:password id="confirmarSenha" required="true"
+                                            requiredMessage="Campo Confirmar senha é obrigatório"/>
+                            
                             </h:panelGrid>                 
 
                         </p:fieldset>
                         <br/><br/><br/>
                         <div class="buttons">
-                            <p:commandButton id="btnCliente" value="Confirmar" actionListener="#{clienteDAOController.create(3)}" />
+                            <p:commandButton id="btnCliente" value="Confirmar" actionListener="#{clienteDAOController.create(3)}" 
+                                             update=":formManter"/>
                             <p:commandButton value="Limpar" type="reset" immediate="true" /> 
                         </div>
                     </p:fieldset>
